--- a/RFCs/toc.yml
+++ b/RFCs/toc.yml
@@ -6,3 +6,5 @@
   href: 0003-Test-Execution-Protocol.md
 - name: 0004 - Adapter extensibility
   href: 0004-Adapter-Extensibility.md
+- name: 0005 - Test platform SDK
+  href: 0005-Test-Platform-SDK.md
