--- a/RFCs/toc.yml
+++ b/RFCs/toc.yml
@@ -8,3 +8,6 @@
   href: 0004-Adapter-Extensibility.md
 - name: 0005 - Test platform SDK
   href: 0005-Test-Platform-SDK.md
+- name: 0006 - Datacollection protocol
+  href: 0006-DataCollection-Protocol.md
+  
