Created RFC for CollectSourceInformation flag

--- a/RFCs/toc.yml
+++ b/RFCs/toc.yml
@@ -10,4 +10,6 @@
   href: 0005-Test-Platform-SDK.md
 - name: 0006 - Datacollection protocol
   href: 0006-DataCollection-Protocol.md
+- name: 0010 - Source Information For Discovered Tests
+  href: 0010-Source-Information-For-Discovered-Tests.md
   
