Update version number and TOC.

--- a/RFCs/toc.yml
+++ b/RFCs/toc.yml
@@ -12,3 +12,6 @@
   href: 0006-DataCollection-Protocol.md
 - name: 0010 - Source Information For Discovered Tests
   href: 0010-Source-Information-For-Discovered-Tests.md
+- name: 0014-Guidelines for TestCase FullyQualifiedName
+  href: 0017-TestCase-FullyQualifiedName.md
+  
